src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Buttonpad__c</fullName>
        <label>Push buttons, touchscreen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cabinets_clean__c</fullName>
        <label>Storage cabinet clean (L)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_you_in_advance_about_the_visit__c</fullName>
        <label>Call you in advance about the visit?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cappuccino_Visual_appearance_of_drink__c</fullName>
        <label>Cappuccino: Visual appearance of drink?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cappuccino_Volume_of_drink_in_the_cup__c</fullName>
        <label>Cappuccino: Volume of drink in the cup?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cean_servicetrolly__c</fullName>
        <label>Neat and clean service trolley</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_for_decaf_cleaning_tablet__c</fullName>
        <label>Channel for decaf / cleaning tablet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Cleaning_station_complete__c</fullName>
        <label>Check: Cleaning station complete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Crosselling_notepads_present__c</fullName>
        <label>coffee info materials present</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Emergency_release_door_freezer__c</fullName>
        <label>Check: Emergency release door freezer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_First_aid_kit_complete__c</fullName>
        <label>Check: First aid kit, complete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Furniture_education_cabinet__c</fullName>
        <label>Education cabinet  clean &amp; free of dust</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Incomming_goods__c</fullName>
        <label>Check: Incomming goods</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Marked_products_for_own_use__c</fullName>
        <label>Check: Marked products for own use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Wastebin__c</fullName>
        <label>Waste bin clean</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checks_Emergency_Lightning__c</fullName>
        <label>Checks: (Emergency) Lightning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clean_and_cleanliness_warehouse__c</fullName>
        <label>Clean &amp; cleanliness warehouse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clean_cleanliness_servicetrolly__c</fullName>
        <label>Clean &amp; cleanliness servicetrolly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clean_floor__c</fullName>
        <label>Clean floor, no spilled ingredients</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clean_inersite_storage_refrigerators__c</fullName>
        <label>Clean inersite storage refrigerators</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clean_of_pest__c</fullName>
        <label>Free from pests and insects</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clean_teadrawers__c</fullName>
        <label>Clean tea drawers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleaning_instruction_vendingmachine__c</fullName>
        <label>Cleaning instruction vendingmachine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Does not apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_surroundings__c</fullName>
        <label>Close surroundings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coffee_hose_mixingunit__c</fullName>
        <label>Coffee hose / mixingunit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coffee_outlet_clean__c</fullName>
        <label>Coffee outlet clean</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coffee_spout__c</fullName>
        <label>Coffee spout</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coffeebrewing_unit__c</fullName>
        <label>Coffee brewer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coffeecontainer__c</fullName>
        <label>Coffeecontainer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cold_waterunit__c</fullName>
        <label>Cold waterunit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conform_the_values_and_standards_of_JDE__c</fullName>
        <label>Conform the values and standards of JDE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adequate</fullName>
                </value>
                <value>
                    <fullName>Point of interest</fullName>
                </value>
                <value>
                    <fullName>Inadequate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Container_coffee_beans__c</fullName>
        <label>Container coffee beans</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Container_cover__c</fullName>
        <label>Container cover</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cooling_freezingunit_icing__c</fullName>
        <label>Cooling- / freezingunit icing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coolingfreezer_clean_surroundings__c</fullName>
        <label>Cooling/freezer clean surroundings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coolingfreezer_doorrubber_cleanok__c</fullName>
        <label>Cooling/freezer doorrubber clean/ok</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coolingfreezer_uptodate_temp_list__c</fullName>
        <label>Cooling/freezer up-to-date temp. list</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Countertop_and_crosssell_area_clean__c</fullName>
        <label>Countertop and cross-sell area clean?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This indicates the country for which the survey is applicable to.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_0333</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>SAP_0975</fullName>
                    <label>Denmark</label>
                </value>
                <value>
                    <fullName>SAP_6706</fullName>
                    <label>France</label>
                </value>
                <value>
                    <fullName>SAP_6864</fullName>
                    <label>Norway</label>
                </value>
                <value>
                    <fullName>SAP_0976</fullName>
                    <label>Sweden</label>
                </value>
                <value>
                    <fullName>SAP_0080</fullName>
                    <label>Spain</label>
                </value>
                <value>
                    <fullName>SAP_6709</fullName>
                    <label>Ireland</label>
                </value>
                <value>
                    <fullName>SAP_6712</fullName>
                    <label>Germany</label>
                </value>
                <value>
                    <fullName>SAP_6750</fullName>
                    <label>Great Britain</label>
                </value>
                <value>
                    <fullName>SAP_0111</fullName>
                    <label>Netherlands</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cover_dispenser_unit__c</fullName>
        <label>Cover dispenser unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cover_mixingbowl_instant_ingredient__c</fullName>
        <label>Cover mixingbowl instant ingredient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_selling_best_before_date__c</fullName>
        <label>Cross selling best before date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_selling_container__c</fullName>
        <label>Cross Sell tray clean</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crosssell_according_to_the_ref_card__c</fullName>
        <label>Cross-sell according to the ref card?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cup_dispensers_springs_working_well__c</fullName>
        <label>Cup dispensers springs working well?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cup_holders__c</fullName>
        <label>Cup holders, working and clean</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cupcarrier_grid__c</fullName>
        <label>Cupcarrier, grid</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cupheater__c</fullName>
        <label>Cupheater</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cupslide_holder__c</fullName>
        <label>Cupslide, holder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customers_satisfaction_coffee_facility__c</fullName>
        <label>Customers satisfaction, coffee facility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Adequate</fullName>
                </value>
                <value>
                    <fullName>Mediocre</fullName>
                </value>
                <value>
                    <fullName>Inadequate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cylinder__c</fullName>
        <label>Cylinder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DECK_desktop__c</fullName>
        <label>DECK counter top</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DECK_tea_vendingmachine__c</fullName>
        <label>DECK tea vendingmachine clean</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_of_interview__c</fullName>
        <label>Date of interview</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discusses_costs_receipts__c</fullName>
        <label>I discuss costs and make a receipt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adequate</fullName>
                </value>
                <value>
                    <fullName>Point of interest</fullName>
                </value>
                <value>
                    <fullName>Inadequate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispenser_clean_free_of_dust__c</fullName>
        <label>Dispenser clean / free of dust</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispensing_temperature_hot_water__c</fullName>
        <label>Dispensing temperature hot water</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispensingpoint__c</fullName>
        <label>Dispensingpoint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispensingunit__c</fullName>
        <label>Dispensingunit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dispensingunit_splashguard__c</fullName>
        <label>Dispenser outlet area, splash guard</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Good</fullName>
                    <default>true</default>
                    <label>Good</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>